@@ -1,5 +1,10 @@
 2005-03-21  Adam Fedor  <fedor@gnu.org>
 
+	* Tools/gsnd/portaudio/pa_unix_oss/pa_unix_oss.c: Fix for FreeBSD
+	FTBFS (Fixes Bug #12316). Strip DOS LFs.
+
+2005-03-21  Adam Fedor  <fedor@gnu.org>
+
 	* configure.ac: Check for libgif
 	* Source/NSBitmapImageRep+GIF.m: Support libgif
 	* Source/NSBitmapImageRem.m: Idem. (Fixes Bug #12362).
